<resources>
    <string name="app_name">MovieMania</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnBackToLog">Back to login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_top_rated">Top Rated Movies</string>
    <string name="menu_filter">Browse Movies</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_log_out">Log Out</string>

    <string name="my_api_key">892b5b7324868cc89de6ebf77a00d6a5</string>
    <string name="error_msg">Sorry! Couldn\'t fetch movies.</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="menu_refresh">Refresh</string>
    <string name="filter_year">Year</string>
    <string name="filter_keyword">Keyword</string>
    <string name="filter_language">Language</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_rating">Rating</string>
    <string name="btn_browse">Browse</string>
    <string name="btn_add_watchlist">Add to watchlist</string>
    <string name="btn_remove_watchlist">Remove from watchlist</string>
</resources>