<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.LoginFragment"
    android:background="@drawable/login">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/email"
        android:layout_marginTop="250dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:hint="@string/password"
        android:layout_marginTop="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="35dp"
        android:text="@string/btnLogin"
        android:background="@drawable/border_radius" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginTop="35dp"
        android:text="@string/btnRegister"
        android:background="@drawable/border_radius" />

</androidx.constraintlayout.widget.ConstraintLayout>